--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Invoice Report SAPUI5 App</title>
+		<script
+		id="sap-ui-bootstrap"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_belize"
+		data-sap-ui-libs="sap.m"
+		data-sap-ui-compatVersion="edge"
+		data-sap-ui-async="true"
+		data-sap-ui-onInit="module:search/Invoice/index"
+		data-sap-ui-resourceroots='{
+			"search.Invoice": "./"
+		}'>
+
+    </script>
 </head>
 <body>
 	<div>Invoice Report</div>
